--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
 <body>
     <h2>Login Page</h2>
     <div class="login">
-        <form id="login" method="get" action="login.php">
+        <form id="login" method="get" action="loginnew.php">
             <label><b>User Name</b></label>
             <input type="text" name="Uname" id="Uname" placeholder="Username"><br><br>
             <label><b>Password</b></label>
